alignment problem resolve
client record by franchisee 'no record found alignment ' problem resolve

--- a/css/drugsafe_custom_style.css
+++ b/css/drugsafe_custom_style.css
@@ -161,3 +161,6 @@ padding: 4px 0px;
   
 margin-left: -14px;
 }
+.search_align{
+ margin-left: 0px;   
+}
